--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -52,8 +52,10 @@
 .form-cadastro{
     max-width: 700px;
     margin: 0 auto;
-    box-shadow: 0 0 10px #d8d8d8;
     overflow: hidden;
+}
+.box-shadow{
+     box-shadow: 0 0 10px #d8d8d8;
 }
 .form-slide{
     display: flex;
@@ -68,3 +70,38 @@
     overflow: hidden;
 }
 
+/*Menu*/
+.menu{
+    width: 250px;
+    height: 100vh;
+    position: fixed;
+}
+
+/* Cadastro */
+.cadastro{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.h-100{
+    height: 100%;
+}
+
+/* Grid-menu */
+.grid{
+    display: grid;
+    grid-template-columns: 250px 1fr;
+    grid-template-rows: 1fr;
+}
+.faixa{
+    background: #343a40a6;
+    width: 100%;
+    height: 40px;
+}
+@media(max-width: 992px){
+    .grid{
+        grid-template-columns: 1fr;
+    }
+}
