--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -53,6 +53,7 @@
     max-width: 700px;
     margin: 0 auto;
     overflow: hidden;
+    box-shadow: 0 0 10px #d8d8d8;
 }
 .box-shadow{
      box-shadow: 0 0 10px #d8d8d8;
